Complete the website's layout and positioning

--- a/index.html
+++ b/index.html
@@ -18,14 +18,18 @@
     <div class="webintro">
       <div class="textcontent">
         <div id="title">This website is awesome!</div>
-        <div id="text">This is the subject, here it is! in all its glory</div>
-        <div><button>Sign up</button></div>
+        <div id="text">
+          This is the subject, here it is! in all its gloryin all its gloryin
+          all its gloryin all its gloryin all its gloryin all its glory
+        </div>
+        <div><button class="button">Sign up</button></div>
       </div>
       <img
         src="./images/Landimg.jpg"
         alt="This is a placeholder for an image"
       />
     </div>
+    <div class="cardtitle">Here's some info for ya !</div>
     <div class="randomcards">
       <div class="card">
         <img src="#" alt="" />
@@ -44,16 +48,20 @@
         <div>this is a subject under an illustration</div>
       </div>
     </div>
-    <div class="quote">
+    <div class="quoteblock">
       <div class="quote">
         Here's a quote, dont like it ? try a different place, at a different
         time, still dont like it ? oh hell there's no pleasing you
       </div>
-      <div class="author">Me or someone who thought of it first</div>
+      <div class="author">- Me or someone who thought of it first</div>
     </div>
     <div class="callaction">
       <div class="callcontainer">
-        <div class="calltext"></div>
+        <div class="calltext">
+          <div id="toptext">Call to action, its time !</div>
+          <div id="bottomtext">This is a call to action !</div>
+        </div>
+        <button id="botsign">Sign up</button>
       </div>
     </div>
     <div class="footer">
